Finished setting structure

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "reponsive-images",
-  "version": "0.1.0",
+  "name": "Udacity__MWS--RI",
+  "version": "0.0.5",
   "repository": {
     "type": "git",
     "url": "https://github.com/udacity/responsive-images.git"
