--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-copy": "~0.8.0",
+    "grunt-contrib-imagemin": "^2.0.1",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-uglify": "~0.5.0",
+    "grunt-imagemagick": "^0.1.5",
     "grunt-mkdir": "~0.1.2",
     "identify": "^0.1.5",
     "imagemagick": "^0.1.3"
